[package]
name = "api_models"
version = "1.0.0"
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
validator = { version = "0.12", features = ["derive"] }
regex = "1"
lazy_static = "1"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
strum = "0.23"
strum_macros = "0.23"

[dev-dependencies]
