[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features=["rustls"] }
rustls = "0.20.3"

entity = { path = "../entity" }
migration = { path = "../migration" }
api_models = {path = "../api_models"}

serde = "1"
serde_json = "^1.0"

log = "0.4"
env_logger = "0.9"
dotenv = "0.15.0"
uuid = { version = "1.1.2", features = ["serde", "v4"] }

# authentication
jsonwebtoken = "8.0.1"
actix-web-httpauth = "0.5.1"
actix-cors = "0.5.4"
actix-identity = "0.3.1"

[[bin]]
name = "backend"
# path = "src/bin/main.rs"

