[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features=["rustls"] }
actix-files = "0.6.2"
rustls = "0.20.6"
awc = { version = "3", features = ["rustls"] }

entity = { path = "../entity" }
migration = { path = "../migration" }
api_models = {path = "../api_models"}

serde = "1"
serde_json = "^1.0"

log = "0.4"
env_logger = "0.9"
dotenv = "0.15.0"
uuid = { version = "1.1.2", features = ["serde", "v4"] }

# authentication
jsonwebtoken = "8.1.1"
actix-web-httpauth = "0.8"
actix-cors = "0.6"
actix-identity = "0.3.1"

[[bin]]
name = "backend"

