[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }

[dependencies.sea-orm]
version = "0.9.0"
features = [ "sqlx-postgres","runtime-async-std-rustls", "macros", "debug-print", "with-json", "with-chrono", "with-uuid" ]
default-features = false

[profile.dev]
opt-level = 1
incremental = true

[profile.release]
opt-level = 3
debug = false
incremental = false
