[package]
version = "0.1.0"
name = "web_ui"
repository = "https://github.com/seed-rs/seed-quickstart"
authors = ["Your Name <email@address.com>"]
description = "App Description"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[dependencies]
seed = "0.8.0"
chrono = { version = "0.4.15", features = ["serde"]}
uuid = { version = "0.8", features = ["serde", "v4"] }
strum = "0.23"
strum_macros = "0.23"
serde = "1.0.115"
wasm-bindgen-futures = "0.4.17"
serde-wasm-bindgen = "0.1.3"
api_models = {path = "../api_models"}

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1


[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']

[unstable]
option_get_or_insert_default = true

[net]
net.git-fetch-with-cli = true   