[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }

[dependencies.sea-orm]
version = "0.6.0"
features = [ "sqlx-postgres","runtime-async-std-rustls", "macros","debug-print" ]
default-features = false

[profile.dev]
opt-level = 1
incremental = true

[profile.release]
opt-level = 3
debug = false
incremental = false
